update, clening code from warnings in idea